# Automation-Engine

./: .gitignore  README.md
Backend/: CMakeLists.txt  Dockerfile  vcpkg.json
Backend/include/core/: Logger.hpp
Backend/include/integration/: RateLimitTask.cpp
Backend/include/utils/: Threatanalyzer.hpp
Backend/include/worker/: BlockIPTask.hpp  ShellTask.hpp  Task.hpp
Backend/src/: main.cpp
Backend/src/tools/: LogViewer.cpp
Backend/src/utils/: Threatanalyzer.cpp
Backend/src/worker/: BlockIPTask.cpp  ShellTask.cpp
Frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Frontend/src/: Dashboard.tsx  index.css
docs/: automation.backend.md  automation.frontend.md  automation.infrastructure.md  automation.md  root.md  templates.backend.cmake.md  templates.backend.task.md  templates.backend.worker.md  templates.frontend.component.md  templates.frontend.page.md  templates.infra.docker.md  templates.infra.postgres.md
docs/architecture/: architecture.md
docs/code/: code.md
docs/guide/: guide.md
services/: mock_rate_limiter.py
services/relay/: index.js  package-lock.json  package.json
shared/: custom_workflow.json  routine.json  workflow_schema.json
test/: attack_simulator.py  dashboard_stress_test.py  relay_benchmark.py
